removed superflous argument in nb

--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,24 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow version: 1.10.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-06-25 15:15:14.513663: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "export WD=./Simulation_result\n",
@@ -41,35 +26,15 @@
     "\n",
     "for CONFIG in $CONF/*.json\n",
     "do\n",
-    "    python3 $SCRIPT $CONFIG --intensity\n",
+    "    python3 $SCRIPT $CONFIG\n",
     "done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error in names(x) <- value : \n",
-      "  'names' attribute [4] must be the same length as the vector [0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Error in names(x) <- value : \n",
-      "  'names' attribute [4] must be the same length as the vector [0]\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%R\n",
     "experiments <- list.dirs(path = \"./Simulation_result\", full.names = TRUE, recursive = FALSE)\n",
@@ -97,159 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: Rsamtools\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: GenomeInfoDb\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: BiocGenerics\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: parallel\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘BiocGenerics’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:parallel’:\n",
-      "\n",
-      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
-      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
-      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    IQR, mad, sd, var, xtabs\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    anyDuplicated, append, as.data.frame, basename, cbind, colMeans,\n",
-      "    colnames, colSums, dirname, do.call, duplicated, eval, evalq,\n",
-      "    Filter, Find, get, grep, grepl, intersect, is.unsorted, lapply,\n",
-      "    lengths, Map, mapply, match, mget, order, paste, pmax, pmax.int,\n",
-      "    pmin, pmin.int, Position, rank, rbind, Reduce, rowMeans, rownames,\n",
-      "    rowSums, sapply, setdiff, sort, table, tapply, union, unique,\n",
-      "    unsplit, which, which.max, which.min\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: S4Vectors\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: stats4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘S4Vectors’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    expand.grid\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: IRanges\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: GenomicRanges\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: Biostrings\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: XVector\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘Biostrings’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:base’:\n",
-      "\n",
-      "    strsplit\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: Biobase\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Welcome to Bioconductor\n",
-      "\n",
-      "    Vignettes contain introductory material; view with\n",
-      "    'browseVignettes()'. To cite Bioconductor, see\n",
-      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: SummarizedExperiment\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: DelayedArray\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: matrixStats\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:Biobase’:\n",
-      "\n",
-      "    anyMissing, rowMedians\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: BiocParallel\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "Attaching package: ‘DelayedArray’\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following object is masked from ‘package:Biostrings’:\n",
-      "\n",
-      "    type\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    aperm, apply\n",
-      "\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%R\n",
     "library(MMDiff3)\n",
@@ -262,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
