Bugfix in data generation

--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,30 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-06-26 14:35:55.495248: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-26 14:36:46.783855: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-26 14:37:44.268417: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-26 14:38:37.991469: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "export WD=./Simulation_result\n",
@@ -53,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,10 +167,6 @@
       "\n",
       "\n",
       "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Want to understand how all the pieces fit together? See the R for Data\n",
-      "Science book: http://r4ds.had.co.nz/\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
       "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: SummarizedExperiment\n",
       "\n",
       "  warnings.warn(x, RRuntimeWarning)\n",
@@ -286,144 +261,6 @@
       "  warnings.warn(x, RRuntimeWarning)\n",
       "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_3\n",
       "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_2\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_3\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_3\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_8 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing Output...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: pre-computing Kernel matrix...\n",
-      "\n",
       "  warnings.warn(x, RRuntimeWarning)\n"
      ]
     }
@@ -432,8 +269,10 @@
     "%%R\n",
     "\n",
     "experiment_groups <- as.list(unique(datadf[['Group']]))\n",
+    "\n",
     "for (exp_group in experiment_groups){\n",
     "\n",
+    "    group_df <- subset(datadf, Group == exp_group)\n",
     "    group_dir <- paste0('./Experiment_out','/',exp_group)\n",
     "    dir.create(paste0(group_dir,'/'))\n",
     "    \n",
@@ -443,10 +282,10 @@
     "    samplesheet <- data.frame(list(modnames, modnames, rep(1, 10), rep('Ctr', 10), rep(1,10), rep('macs', 10)))\n",
     "    colnames(samplesheet)<-c('SampleID', 'Tissue', 'Factor', 'Condition', 'Replicate', 'PeakCaller')\n",
     "    write.csv(samplesheet, paste0(group_dir,'/','SampleSheet.csv'), row.names=FALSE)\n",
-    "    replicas <- as.list(unique(datadf[['Experiment']]))\n",
+    "    replicas <- as.list(unique(group_df[['Experiment']]))\n",
     "                     \n",
     "    for (replica in replicas){\n",
-    "        replica_df <- subset(datadf, Experiment == replica)\n",
+    "        replica_df <- subset(group_df, Experiment == replica)\n",
     "        peaks <- as.list(unique(replica_df[['Peak']]))\n",
     "        patterns <- as.list(unique(replica_df[['Pattern']]))\n",
     "\n",
