WIP on data analysis

--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -94,7 +94,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the Data"
+    "### Auxilliary Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "make_mat<-function(x) {\n",
+    "  b<-matrix(0, 10, 10)\n",
+    "  b[lower.tri(b, diag=FALSE)]<- x\n",
+    "  b <- t(b)\n",
+    "  b <- (b+t(b))\n",
+    "  return(b)\n",
+    "}\n",
+    "\n",
+    "get_evecs <- function(x) {\n",
+    "  b<-matrix(0, 10, 10)\n",
+    "  b[lower.tri(b, diag=FALSE)]<- x\n",
+    "  b <- t(b)\n",
+    "  b <- (b+t(b))\n",
+    "  deg <- colSums(b)\n",
+    "  d<-matrix(0, 10, 10)\n",
+    "  diag(d)<-deg\n",
+    "  L<-d-b\n",
+    "  L<- sqrt(diag(1/deg)) %*% L %*% sqrt(diag(1/deg))\n",
+    "  e <- eigen(L)\n",
+    "  vv<- c()\n",
+    "  for (i in 1:9){\n",
+    "    vv<- c(vv,e$vectors[,i]*e$values[i])\n",
+    "  }\n",
+    "  return(e$vectors[,1])\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Projections"
    ]
   },
   {
@@ -105,12 +146,20 @@
    "source": [
     "%%R\n",
     "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
-    "patterns <- list.dirs(path = mmd_wd, full.names = TRUE, recursive = FALSE)\n",
     "\n",
-    "for (pattern in patterns){\n",
-    "    pattern_name<-basename(pattern)\n",
-    "    dists_path<-list.files(path = pattern, full.names = TRUE, recursive = FALSE)[1]\n",
-    "    dists <- data.frame(read.csv(file=paste(dists_path), header=TRUE, sep=\",\")\n",
+    "par(mfrow=c(3,2)) \n",
+    "par(mar=c(1,1,1,1))\n",
+    "\n",
+    "for (replica in replicas){\n",
+    "    exp_df <- data.frame()\n",
+    "    patterns <- list.dirs(path = replica, full.names = TRUE, recursive = FALSE)\n",
+    "    for (pattern in patterns){\n",
+    "        pattern_name<-basename(pattern)\n",
+    "        dists <- data.frame(read.csv(file=paste0(pattern, '/', 'MMD_dists.csv'), header=TRUE, sep=\",\"))\n",
+    "        dists$pattern <- pattern_name\n",
+    "        exp_df<-rbind(exp_df, dists)\n",
+    "    }\n",
+    "    evecs <- apply((exp_df[,2:46]),1,get_evecs)\n",
     "}\n"
    ]
   }
