--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -70,10 +70,10 @@
     "        exp_name <- basename(experiment)\n",
     "        patterns <- list.dirs(path = experiment, full.names = TRUE, recursive = FALSE)\n",
     "        for (pattern in patterns) {\n",
-    "            pattern_name<-basename(pattern)\n",
+    "            pattern_name <- basename(pattern)\n",
     "            peaks <- list.dirs(path = pattern, full.names = TRUE, recursive = FALSE)\n",
     "            for (peak in peaks) {\n",
-    "                peak_name<-basename(peak)\n",
+    "                peak_name <- basename(peak)\n",
     "                peak_file <- list.files(path = peak, full.names = TRUE, recursive = FALSE)[1]\n",
     "                datalist <- rbind(datalist, c(group_name, exp_name, pattern_name, peak_name, peak_file))\n",
     "            }\n",
@@ -81,7 +81,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "datadf = data.frame(datalist)\n",
+    "datadf <- data.frame(datalist)\n",
     "colnames(datadf) <- x"
    ]
   },
@@ -132,9 +132,9 @@
     "    \n",
     "    n_mods <- 10\n",
     "\n",
-    "    modnames<-sapply(0:9, function(i) paste0('mod_',i))\n",
+    "    modnames <- sapply(0:9, function(i) paste0('mod_',i))\n",
     "    samplesheet <- data.frame(list(modnames, modnames, rep(1, 10), rep('Ctr', 10), rep(1,10), rep('macs', 10)))\n",
-    "    colnames(samplesheet)<-c('SampleID', 'Tissue', 'Factor', 'Condition', 'Replicate', 'PeakCaller')\n",
+    "    colnames(samplesheet) <- c('SampleID', 'Tissue', 'Factor', 'Condition', 'Replicate', 'PeakCaller')\n",
     "    write.csv(samplesheet, paste0(group_dir,'/','SampleSheet.csv'), row.names=FALSE)\n",
     "    replicas <- as.list(unique(group_df[['Experiment']]))\n",
     "                     \n",
@@ -172,15 +172,15 @@
     "\n",
     "            readList <- list()\n",
     "            rawCounts = matrix(, nrow = length(peaks), ncol = n_mods)\n",
-    "            rnames <-c()\n",
-    "            cnames <-c()\n",
+    "            rnames <- c()\n",
+    "            cnames <- c()\n",
     "\n",
     "            for (i in c(0:(length(peaks)-1))){\n",
-    "                rnames <-c(rnames, paste(\"chr\",i, \":0-3300\",sep=\"\"))\n",
+    "                rnames <- c(rnames, paste(\"chr\",i, \":0-3300\",sep=\"\"))\n",
     "            }\n",
     "\n",
     "            for(i in c(0:(n_mods-1))) {\n",
-    "                cnames <-c(cnames, paste(\"mod_\",i, sep=\"\"))\n",
+    "                cnames <- c(cnames, paste(\"mod_\",i, sep=\"\"))\n",
     "            }\n",
     "\n",
     "            rownames(rawCounts) <- rnames\n",
@@ -189,23 +189,23 @@
     "            for(i in c(0:(n_mods-1))) {\n",
     "                col <- paste(\"mod_\",i, sep=\"\")\n",
     "                tempList = list() \n",
-    "                j<-0\n",
+    "                j <- 0\n",
     "                for(peak in peaks){\n",
-    "                    row<-paste(\"chr\",j, \":0-3300\",sep=\"\")\n",
-    "                    df<-subset(read_data[[peak]], modification==i)\n",
-    "                    tempList[[row]]<-(as.numeric(df$position)+200+1)\n",
+    "                    row <- paste(\"chr\",j, \":0-3300\",sep=\"\")\n",
+    "                    df <- subset(read_data[[peak]], modification==i)\n",
+    "                    tempList[[row]] <- (as.numeric(df$position)+200+1)\n",
     "                    rawCounts[row, col] <- nrow(df)\n",
-    "                    j<-j+1\n",
+    "                    j <- j+1\n",
     "                }\n",
     "                readList[[col]] <- tempList\n",
     "            }\n",
     "\n",
     "            MMD@Reads <- list('Center'=readList)\n",
-    "            MMD@RawTotalCounts = rawCounts\n",
+    "            MMD@RawTotalCounts <- rawCounts\n",
     "            MMD <- compDists(MMD,dist.method='MMD2', background_intensity=0.35)\n",
     "            MMD <- compDists(MMD,dist.method='MMD')\n",
-    "            dists <-MMD@DISTs$MMD\n",
-    "            dists2 <-MMD@DISTs$MMD2       \n",
+    "            dists <- MMD@DISTs$MMD\n",
+    "            dists2 <- MMD@DISTs$MMD2       \n",
     "            write.csv(dists, file = paste0(dirname, \"/MMD_old_dists.csv\"))\n",
     "            write.csv(dists2, file = paste0(dirname, \"/MMD_dists.csv\"))\n",
     "        }\n",
