Fixes to visualisation bootstrap test

--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -73,9 +73,9 @@
     "%%R\n",
     "peak_data<-data.frame(read.csv(paste0(sim_wd,\"/\",\"pattern_0/peak_0/data.csv\")))\n",
     "par(mfrow=c(10,1)) \n",
-    "par(mar=c(1,1,1,1))\n",
+    "par(mar=c(2,1,1,1))\n",
     "for (i in 0:9) {\n",
-    "    hist(subset(peak_data,modification==i)$position, xlim=c(0,3300), ylim = c(0, 20), breaks=200)\n",
+    "    hist(subset(peak_data,modification==i)$position, xlim=c(0,3300), ylim = c(0, 40), breaks=200, main=paste0(\"Modification: \",i ))\n",
     "}"
    ]
   },
