--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -201,12 +201,12 @@
     "            }\n",
     "\n",
     "            MMD@Reads <- list('Center'=readList)\n",
-    "            MMD@RawTotalCounts <- rawCounts\n",
-    "            MMD <- compDists(MMD,dist.method='MMD2', background_intensity=0.35)\n",
-    "            MMD <- compDists(MMD,dist.method='MMD')\n",
-    "            dists <- MMD@DISTs$MMD\n",
-    "            dists2 <- MMD@DISTs$MMD2       \n",
-    "            write.csv(dists, file = paste0(dirname, \"/MMD_old_dists.csv\"))\n",
+    "            MMD@RawTotalCounts = rawCounts\n",
+    "            MMD <- compDists(MMD,dist.method='MMD2', background_intensity=0.25, bootstrap_n=1000)\n",
+    "            #MMD <- compDists(MMD,dist.method='MMD')\n",
+    "            #dists <-MMD@DISTs$MMD\n",
+    "            dists2 <-MMD@DISTs$MMD2       \n",
+    "            #write.csv(dists, file = paste0(dirname, \"/MMD_old_dists.csv\"))\n",
     "            write.csv(dists2, file = paste0(dirname, \"/MMD_dists.csv\"))\n",
     "        }\n",
     "    }\n",
