--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -53,8 +53,8 @@
    "outputs": [],
    "source": [
     "%%R\n",
-    "exp_wd <- \"~/Documents/GitHub/MMDEpiCluster/Experiment_NB/Experiment_out/test2\"\n",
-    "sim_wd <- \"~/Documents/GitHub/MMDEpiCluster/Experiment_NB/Simulation_result/test2/Experiment_test2_1\""
+    "exp_wd <- \"./Experiment_out/test2\"\n",
+    "sim_wd <- \"./Simulation_result/test2/Experiment_test2_1\""
    ]
   },
   {
